src/objects/Springboard__c.object
<CustomObject>
    <description>Springboards are the action hooks for separate functions (Visualforce) features that get &apos;pulled&apos; into the mobile demo app</description>
    <fields>
        <fullName>Action_Name__c</fullName>
        <description>The name of the action that will appear on the rendered button</description>
        <inlineHelpText>The name of the action that will appear on the rendered button</inlineHelpText>
        <label>Action Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Button_Icon__c</fullName>
        <label>Button Icon</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Full_URL__c</fullName>
        <description>full url starting with http</description>
        <label>Full URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requires_Login__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Denotes whether app needs login to access. Can be used to enable/disable rendered button</description>
        <inlineHelpText>Denotes whether app needs login to access. Can be used to enable/disable rendered button</inlineHelpText>
        <label>Requires Login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visualforce_Page_Name__c</fullName>
        <description>The visualforce page that will form the link from the button that gets clicked. Don&apos;t use any slashes.</description>
        <inlineHelpText>The visualforce page that will form the link from the button that gets clicked. Don&apos;t use any slashes.</inlineHelpText>
        <label>Visualforce Page Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Springboard</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Action_Name__c</columns>
        <columns>Visualforce_Page_Name__c</columns>
        <columns>Requires_Login__c</columns>
        <columns>Full_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SB-{0000}</displayFormat>
        <label>Springboard Id</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>